--- a/huXn/index.html
+++ b/huXn/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="app.js"></script>
+    <script src="stringManipulation.js"></script>
+    <script src="typeConversion.js"></script>
 </body>
 </html>
