added missing files such as basics , loops and conditions

--- a/huXn/index.html
+++ b/huXn/index.html
@@ -8,5 +8,8 @@
 <body>
     <script src="stringManipulation.js"></script>
     <script src="typeConversion.js"></script>
+    <script src="basics.js"></script>
+    <script src="loops.js"></script>
+    <script src="conditions.js"></script>
 </body>
 </html>
