array and it's basic methods

--- a/huXn/index.html
+++ b/huXn/index.html
@@ -6,10 +6,11 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="stringManipulation.js"></script>
-    <script src="typeConversion.js"></script>
-    <script src="basics.js"></script>
-    <script src="loops.js"></script>
-    <script src="conditions.js"></script>
+    <!-- <script src="stringManipulation.js"></script> -->
+    <!-- <script src="typeConversion.js"></script> -->
+    <!-- <script src="basics.js"></script> -->
+    <!-- <script src="loops.js"></script> -->
+    <!-- <script src="conditions.js"></script> -->
+    <script src="array.js"></script>
 </body>
 </html>
