--- a/huXn/index.html
+++ b/huXn/index.html
@@ -15,6 +15,7 @@
     <!-- <script src="loops.js"></script> -->
     <!-- <script src="conditions.js"></script> -->
     <!-- <script src="array.js"></script> -->
-    <script src="objects.js"></script>
+    <!-- <script src="objects.js"></script> -->
+    <script src="function.js"></script>
 </body>
 </html>
