--- a/javaScript/index.html
+++ b/javaScript/index.html
@@ -6,9 +6,10 @@
     <title>Document</title>
 </head>
 <body>
-    <script>
-        console.log("hello this is me learning js...")
-    </script>
+    <main>
+        <section>
+            <p> <strong>Hi this is me learning js</strong></p>
+        </section>
     <!-- <script src="01_basics.js"></script> -->
     <!-- <script src="02_typeConversion.js"></script> -->
     <!-- <script src="03_stringManipulation.js"></script> -->
@@ -17,5 +18,6 @@
     <script src="06_function.js"></script>
     <!-- <script src="07_array.js"></script> -->
     <!-- <script src="08_objects.js"></script> -->
+     </main>
 </body>
 </html>
