object method in js

--- a/javaScript/index.html
+++ b/javaScript/index.html
@@ -15,9 +15,9 @@
     <!-- <script src="03_stringManipulation.js"></script> -->
     <!-- <script src="04_conditions.js"></script> -->
     <!-- <script src="05_loops.js"></script> -->
-    <script src="06_function.js"></script>
+    <!-- <script src="06_function.js"></script> -->
     <!-- <script src="07_array.js"></script> -->
-    <!-- <script src="08_objects.js"></script> -->
+    <script src="08_objectsAndMethods.js"></script>
      </main>
 </body>
 </html>
