--- a/javaScript/index.html
+++ b/javaScript/index.html
@@ -1,23 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
     <main>
-        <section>
-            <p> <strong>Hi this is me learning js</strong></p>
-        </section>
-    <!-- <script src="01_basics.js"></script> -->
-    <!-- <script src="02_typeConversion.js"></script> -->
-    <!-- <script src="03_stringManipulation.js"></script> -->
-    <!-- <script src="04_conditions.js"></script> -->
-    <!-- <script src="05_loops.js"></script> -->
-    <!-- <script src="06_function.js"></script> -->
-    <!-- <script src="07_array.js"></script> -->
-    <script src="08_objectsAndMethods.js"></script>
-     </main>
-</body>
+      <section>
+        <p><strong>Hi this is me learning js</strong></p>
+        <p style="color: aqua">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum eos similique illo
+          molestias? Facilis maiores aliquid consequatur deleniti ex iste facere unde dolorem,
+          molestias quidem alias sequi, ipsam dolore vel.
+        </p>
+      </section>
+      <!-- <script src="01_basics.js"></script> -->
+      <!-- <script src="02_typeConversion.js"></script> -->
+      <!-- <script src="03_stringManipulation.js"></script> -->
+      <!-- <script src="04_conditions.js"></script> -->
+      <!-- <script src="05_loops.js"></script> -->
+      <!-- <script src="06_function.js"></script> -->
+      <!-- <script src="07_array.js"></script> -->
+      <!-- <script src="08_objectsAndMethods.js"></script> -->
+    </main>
+  </body>
 </html>
