part1 completed ... date and time

--- a/javaScript_Part1/index.html
+++ b/javaScript_Part1/index.html
@@ -23,6 +23,7 @@
       <!-- <script src="06_function.js"></script> -->
       <!-- <script src="07_array.js"></script> -->
       <!-- <script src="08_objectsAndMethods.js"></script> -->
+       <script src="09_dateAndtime.js"></script>
     </main>
   </body>
 </html>
